tests/error/comptime/dereference_after_lifetime_end2.bz
struct S
{
	.p: ?*int32;

	destructor(&self)
	{
		*self.p;
	}
}

function test()
{
	(consteval {
		let s = S();
		let i = 0;
		s.p = &i;
	});
}
